sass/yofisio/components/comments.sass
#commentform
  label
    font-weight: bold

ol.comment-list
  padding: 0
  .comment
    @for $var from 1 through 5
      &.depth-#{$var}
        margin-left: $var*20px - 20px
        border-left: 4px solid rgba($brand_info, (1.1 - .2*$var))
    margin: .75rem 0
    img.avatar
      height: 64px!important
      width: 64px!important
      padding: 0
      margin: 1rem

.comments-area
  margin-top: 2rem

